Fix scroll index page wit overflow hidden

--- a/src/pages/scss/index.scss
+++ b/src/pages/scss/index.scss
@@ -7,15 +7,22 @@ body {
   background-color: $white;
 }
 
-.main {
-  width: 100%;
-  height: 100vh;
+body.main {
+
+  // width: 100%;
+  // height: 100vh;
+  overflow: hidden !important;
+  // margin-top: 80px;
+}
+.main{
+  // border: 2px solid green;
   background-color: $purple;
-  // height: calc(100vh - 80px);
-  margin-top: 80px;
+  height: calc(110vh - 80px);
+
 }
 
 h1 {
+  // border: 2px solid red;
   color: $white;
   margin: 0 auto;
   text-align: center;
@@ -29,6 +36,7 @@ h1:hover {
 }
 
 h2 {
+  // border: 2px solid yellow;
   color: $pink;
   margin: 0 auto;
   text-align: center;
@@ -64,7 +72,7 @@ h3 {
 @include mediaSm {
   h1 {
     font-size: 75px;
-    padding-top: 50px;
+    // padding-top: 150px;
   }
   h2 {
     font-size: 28px;
@@ -81,7 +89,7 @@ h3 {
 @include mediaMd {
   h1 {
     font-size: 90px;
-    padding-top: 80px;
+    // padding-top: 120px;
   }
   h2 {
     font-size: 35px;
@@ -95,7 +103,7 @@ h3 {
 @include mediaLg {
   h1 {
     font-size: 90px;
-    padding-top: 100px;
+    // padding-top: 100px;
   }
   h2 {
     font-size: 35px;
